// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SignInStartView snapshots > renders combined flow 1`] = `
<div>
  <div
    class="cl-cardBox cl-signIn-start 🔒️ css-lesbzj"
  >
    <div
      class="cl-card cl-signIn-start 🔒️ css-umn37z"
    >
      <div
        class="cl-header 🔒️ css-1f4p2mz"
      >
        <div
          class="cl-logoBox 🔒️ css-18b18uy"
        >
          <a
            class="css-1xlmx23-Link"
            href="https://dashboard.clerk.com/"
          >
            <img
              alt="TestApp"
              class="cl-logoImage 🔒️ css-oc7xeg"
              crossorigin="anonymous"
              src="https://images.clerk.com/uploaded/img_logo.png"
            />
          </a>
        </div>
        <div
          class="css-x0fvpz"
        >
          <h1
            class="cl-headerTitle 🔒️ css-x8j9i5-Heading"
            data-localization-key="signIn.start.titleCombined"
          >
            Continue to TestApp
          </h1>
          <p
            class="cl-headerSubtitle 🔒️ css-1n6j0h4"
            data-color="secondary"
            data-localization-key="signIn.start.subtitleCombined"
            data-variant="body"
          />
        </div>
      </div>
      <div
        class="cl-main 🔒️ css-vvtys3"
      >
        <form
          class="cl-form 🔒️ css-ji79b9"
        >
          <button
            aria-hidden="true"
            style="visibility: hidden; position: absolute;"
            type="submit"
          />
          <div
            class="css-ht35d7"
          >
            <div
              class="cl-formFieldRow cl-formFieldRow__identifier 🔒️ css-k7wlaf"
            >
              <div
                class="cl-formField cl-formField__identifier 🔒️ css-10rdw13"
              >
                <div
                  class="css-17uj465"
                >
                  <div
                    class="cl-formFieldLabelRow cl-formFieldLabelRow__identifier 🔒️ css-66mzqw"
                  >
                    <label
                      class="cl-formFieldLabel cl-formFieldLabel__identifier-field cl-required 🔒️ css-h16r45-FormLabel"
                      data-localization-key="formFieldLabel__identifier"
                      for="identifier-field"
                    />
                  </div>
                  <input
                    aria-disabled="false"
                    aria-invalid="false"
                    aria-required="true"
                    class="cl-formFieldInput cl-input cl-formFieldInput__identifier cl-input__identifier cl-required 🔒️ css-bdpa54"
                    data-feedback="info"
                    data-variant="default"
                    id="identifier-field"
                    name="identifier"
                    placeholder=""
                    props="[object Object]"
                    required=""
                    type="text"
                    value=""
                  />
                </div>
                <span
                  aria-atomic="true"
                  aria-live="polite"
                  class="css-5ur8x"
                />
                <div
                  class="css-z8mie1"
                  style="height: 0px; position: relative;"
                />
              </div>
            </div>
          </div>
          <div
            class="css-1pnppin"
          >
            <div
              class="css-aurft1"
              data-cl-language="en-us"
              data-cl-size="normal"
              data-cl-theme="auto"
              id="clerk-captcha"
              style="display: block; align-self: center; max-height: 0; min-height: unset; margin-bottom: unset;"
            />
            <button
              class="cl-formButtonPrimary cl-button 🔒️ css-6yxkbg"
              data-color="primary"
              data-localization-key="formButtonPrimary"
              data-variant="solid"
            >
              <span
                class="css-2iusy0"
              >
                Continue
                <span
                  class="cl-buttonArrowIcon 🔒️ css-ra3p3j-Icon"
                />
              </span>
            </button>
          </div>
        </form>
      </div>
    </div>
    <div
      class="cl-footer 🔒️ css-12ewqpd"
    >
      <div
        class="cl-footerItem 🔒️ css-1ww4jbf"
      >
        <div
          class="css-dt53uo"
        >
          <div
            class="css-y44tp9"
          >
            <div
              class="css-ssjl5l"
            >
              <p
                class="css-1scq7x4"
                data-color="inherit"
                data-variant="buttonSmall"
              >
                Secured by
              </p>
              <a
                aria-label="Clerk logo"
                class="css-1bdbjec-Link"
                href="https://go.clerk.com/components"
                rel="noopener noreferrer"
                target="_blank"
              >
                <span
                  class="css-yjy4qv-Icon"
                />
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SignInStartView snapshots > renders email form 1`] = `
<div>
  <div
    class="cl-cardBox cl-signIn-start 🔒️ css-lesbzj"
  >
    <div
      class="cl-card cl-signIn-start 🔒️ css-umn37z"
    >
      <div
        class="cl-header 🔒️ css-1f4p2mz"
      >
        <div
          class="cl-logoBox 🔒️ css-18b18uy"
        >
          <a
            class="css-1xlmx23-Link"
            href="https://dashboard.clerk.com/"
          >
            <img
              alt="TestApp"
              class="cl-logoImage 🔒️ css-oc7xeg"
              crossorigin="anonymous"
              src="https://images.clerk.com/uploaded/img_logo.png"
            />
          </a>
        </div>
        <div
          class="css-x0fvpz"
        >
          <h1
            class="cl-headerTitle 🔒️ css-x8j9i5-Heading"
            data-localization-key="signIn.start.title"
          >
            Sign in to TestApp
          </h1>
          <p
            class="cl-headerSubtitle 🔒️ css-1n6j0h4"
            data-color="secondary"
            data-localization-key="signIn.start.subtitle"
            data-variant="body"
          >
            Welcome back! Please sign in to continue
          </p>
        </div>
      </div>
      <div
        class="cl-main 🔒️ css-vvtys3"
      >
        <form
          class="cl-form 🔒️ css-ji79b9"
        >
          <button
            aria-hidden="true"
            style="visibility: hidden; position: absolute;"
            type="submit"
          />
          <div
            class="css-ht35d7"
          >
            <div
              class="cl-formFieldRow cl-formFieldRow__identifier 🔒️ css-k7wlaf"
            >
              <div
                class="cl-formField cl-formField__identifier 🔒️ css-10rdw13"
              >
                <div
                  class="css-17uj465"
                >
                  <div
                    class="cl-formFieldLabelRow cl-formFieldLabelRow__identifier 🔒️ css-66mzqw"
                  >
                    <label
                      class="cl-formFieldLabel cl-formFieldLabel__identifier-field cl-required 🔒️ css-h16r45-FormLabel"
                      data-localization-key="formFieldLabel__identifier"
                      for="identifier-field"
                    />
                  </div>
                  <input
                    aria-disabled="false"
                    aria-invalid="false"
                    aria-required="true"
                    class="cl-formFieldInput cl-input cl-formFieldInput__identifier cl-input__identifier cl-required 🔒️ css-bdpa54"
                    data-feedback="info"
                    data-variant="default"
                    id="identifier-field"
                    name="identifier"
                    placeholder=""
                    props="[object Object]"
                    required=""
                    type="text"
                    value=""
                  />
                </div>
                <span
                  aria-atomic="true"
                  aria-live="polite"
                  class="css-5ur8x"
                />
                <div
                  class="css-z8mie1"
                  style="height: 0px; position: relative;"
                />
              </div>
            </div>
          </div>
          <div
            class="css-1pnppin"
          >
            <div
              class="css-aurft1"
              data-cl-language="en-us"
              data-cl-size="normal"
              data-cl-theme="auto"
              id="clerk-captcha"
              style="display: block; align-self: center; max-height: 0; min-height: unset; margin-bottom: unset;"
            />
            <button
              class="cl-formButtonPrimary cl-button 🔒️ css-6yxkbg"
              data-color="primary"
              data-localization-key="formButtonPrimary"
              data-variant="solid"
            >
              <span
                class="css-2iusy0"
              >
                Continue
                <span
                  class="cl-buttonArrowIcon 🔒️ css-ra3p3j-Icon"
                />
              </span>
            </button>
          </div>
        </form>
      </div>
    </div>
    <div
      class="cl-footer 🔒️ css-12ewqpd"
    >
      <div
        class="cl-footerAction cl-footerAction__signIn 🔒️ css-h2zfvr"
      >
        <span
          class="cl-footerActionText 🔒️ css-1glf53s"
          data-color="secondary"
          data-localization-key="signIn.start.actionText"
          data-variant="body"
        >
          Don’t have an account?
        </span>
        <a
          class="cl-footerActionLink 🔒️ css-12ndoxu-Link"
          data-localization-key="signIn.start.actionLink"
          href="https://clerk.com/sign-up"
        >
          Sign up
        </a>
      </div>
      <div
        class="cl-footerItem 🔒️ css-1ww4jbf"
      >
        <div
          class="css-dt53uo"
        >
          <div
            class="css-y44tp9"
          >
            <div
              class="css-ssjl5l"
            >
              <p
                class="css-1scq7x4"
                data-color="inherit"
                data-variant="buttonSmall"
              >
                Secured by
              </p>
              <a
                aria-label="Clerk logo"
                class="css-1bdbjec-Link"
                href="https://go.clerk.com/components"
                rel="noopener noreferrer"
                target="_blank"
              >
                <span
                  class="css-yjy4qv-Icon"
                />
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SignInStartView snapshots > renders loading screen 1`] = `
<div>
  <div
    class="cl-cardBox 🔒️ css-lesbzj"
  >
    <div
      class="cl-card 🔒️ css-umn37z"
    >
      <div
        class="cl-main 🔒️ css-1m9gx1x"
      >
        <span
          aria-busy="true"
          aria-live="polite"
          class="cl-spinner 🔒️ css-1h6s71a-Spinner"
        />
      </div>
      <div
        class="css-aurft1"
        data-cl-language="en-us"
        data-cl-size="normal"
        data-cl-theme="auto"
        id="clerk-captcha"
        style="display: block; align-self: center; max-height: 0; min-height: unset; margin-bottom: unset;"
      />
    </div>
    <div
      class="cl-footer 🔒️ css-12ewqpd"
    >
      <div
        class="cl-footerItem 🔒️ css-1ww4jbf"
      >
        <div
          class="css-dt53uo"
        >
          <div
            class="css-y44tp9"
          >
            <div
              class="css-ssjl5l"
            >
              <p
                class="css-1scq7x4"
                data-color="inherit"
                data-variant="buttonSmall"
              >
                Secured by
              </p>
              <a
                aria-label="Clerk logo"
                class="css-1bdbjec-Link"
                href="https://go.clerk.com/components"
                rel="noopener noreferrer"
                target="_blank"
              >
                <span
                  class="css-yjy4qv-Icon"
                />
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SignInStartView snapshots > renders restricted mode (no sign-up link) 1`] = `
<div>
  <div
    class="cl-cardBox cl-signIn-start 🔒️ css-lesbzj"
  >
    <div
      class="cl-card cl-signIn-start 🔒️ css-umn37z"
    >
      <div
        class="cl-header 🔒️ css-1f4p2mz"
      >
        <div
          class="cl-logoBox 🔒️ css-18b18uy"
        >
          <a
            class="css-1xlmx23-Link"
            href="https://dashboard.clerk.com/"
          >
            <img
              alt="TestApp"
              class="cl-logoImage 🔒️ css-oc7xeg"
              crossorigin="anonymous"
              src="https://images.clerk.com/uploaded/img_logo.png"
            />
          </a>
        </div>
        <div
          class="css-x0fvpz"
        >
          <h1
            class="cl-headerTitle 🔒️ css-x8j9i5-Heading"
            data-localization-key="signIn.start.title"
          >
            Sign in to TestApp
          </h1>
          <p
            class="cl-headerSubtitle 🔒️ css-1n6j0h4"
            data-color="secondary"
            data-localization-key="signIn.start.subtitle"
            data-variant="body"
          >
            Welcome back! Please sign in to continue
          </p>
        </div>
      </div>
      <div
        class="cl-main 🔒️ css-vvtys3"
      >
        <form
          class="cl-form 🔒️ css-ji79b9"
        >
          <button
            aria-hidden="true"
            style="visibility: hidden; position: absolute;"
            type="submit"
          />
          <div
            class="css-ht35d7"
          >
            <div
              class="cl-formFieldRow cl-formFieldRow__identifier 🔒️ css-k7wlaf"
            >
              <div
                class="cl-formField cl-formField__identifier 🔒️ css-10rdw13"
              >
                <div
                  class="css-17uj465"
                >
                  <div
                    class="cl-formFieldLabelRow cl-formFieldLabelRow__identifier 🔒️ css-66mzqw"
                  >
                    <label
                      class="cl-formFieldLabel cl-formFieldLabel__identifier-field cl-required 🔒️ css-h16r45-FormLabel"
                      data-localization-key="formFieldLabel__identifier"
                      for="identifier-field"
                    />
                  </div>
                  <input
                    aria-disabled="false"
                    aria-invalid="false"
                    aria-required="true"
                    class="cl-formFieldInput cl-input cl-formFieldInput__identifier cl-input__identifier cl-required 🔒️ css-bdpa54"
                    data-feedback="info"
                    data-variant="default"
                    id="identifier-field"
                    name="identifier"
                    placeholder=""
                    props="[object Object]"
                    required=""
                    type="text"
                    value=""
                  />
                </div>
                <span
                  aria-atomic="true"
                  aria-live="polite"
                  class="css-5ur8x"
                />
                <div
                  class="css-z8mie1"
                  style="height: 0px; position: relative;"
                />
              </div>
            </div>
          </div>
          <div
            class="css-1pnppin"
          >
            <div
              class="css-aurft1"
              data-cl-language="en-us"
              data-cl-size="normal"
              data-cl-theme="auto"
              id="clerk-captcha"
              style="display: block; align-self: center; max-height: 0; min-height: unset; margin-bottom: unset;"
            />
            <button
              class="cl-formButtonPrimary cl-button 🔒️ css-6yxkbg"
              data-color="primary"
              data-localization-key="formButtonPrimary"
              data-variant="solid"
            >
              <span
                class="css-2iusy0"
              >
                Continue
                <span
                  class="cl-buttonArrowIcon 🔒️ css-ra3p3j-Icon"
                />
              </span>
            </button>
          </div>
        </form>
      </div>
    </div>
    <div
      class="cl-footer 🔒️ css-12ewqpd"
    >
      <div
        class="cl-footerItem 🔒️ css-1ww4jbf"
      >
        <div
          class="css-dt53uo"
        >
          <div
            class="css-y44tp9"
          >
            <div
              class="css-ssjl5l"
            >
              <p
                class="css-1scq7x4"
                data-color="inherit"
                data-variant="buttonSmall"
              >
                Secured by
              </p>
              <a
                aria-label="Clerk logo"
                class="css-1bdbjec-Link"
                href="https://go.clerk.com/components"
                rel="noopener noreferrer"
                target="_blank"
              >
                <span
                  class="css-yjy4qv-Icon"
                />
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SignInStartView snapshots > renders waitlist mode 1`] = `
<div>
  <div
    class="cl-cardBox cl-signIn-start 🔒️ css-lesbzj"
  >
    <div
      class="cl-card cl-signIn-start 🔒️ css-umn37z"
    >
      <div
        class="cl-header 🔒️ css-1f4p2mz"
      >
        <div
          class="cl-logoBox 🔒️ css-18b18uy"
        >
          <a
            class="css-1xlmx23-Link"
            href="https://dashboard.clerk.com/"
          >
            <img
              alt="TestApp"
              class="cl-logoImage 🔒️ css-oc7xeg"
              crossorigin="anonymous"
              src="https://images.clerk.com/uploaded/img_logo.png"
            />
          </a>
        </div>
        <div
          class="css-x0fvpz"
        >
          <h1
            class="cl-headerTitle 🔒️ css-x8j9i5-Heading"
            data-localization-key="signIn.start.title"
          >
            Sign in to TestApp
          </h1>
          <p
            class="cl-headerSubtitle 🔒️ css-1n6j0h4"
            data-color="secondary"
            data-localization-key="signIn.start.subtitle"
            data-variant="body"
          >
            Welcome back! Please sign in to continue
          </p>
        </div>
      </div>
      <div
        class="cl-main 🔒️ css-vvtys3"
      >
        <form
          class="cl-form 🔒️ css-ji79b9"
        >
          <button
            aria-hidden="true"
            style="visibility: hidden; position: absolute;"
            type="submit"
          />
          <div
            class="css-ht35d7"
          >
            <div
              class="cl-formFieldRow cl-formFieldRow__identifier 🔒️ css-k7wlaf"
            >
              <div
                class="cl-formField cl-formField__identifier 🔒️ css-10rdw13"
              >
                <div
                  class="css-17uj465"
                >
                  <div
                    class="cl-formFieldLabelRow cl-formFieldLabelRow__identifier 🔒️ css-66mzqw"
                  >
                    <label
                      class="cl-formFieldLabel cl-formFieldLabel__identifier-field cl-required 🔒️ css-h16r45-FormLabel"
                      data-localization-key="formFieldLabel__identifier"
                      for="identifier-field"
                    />
                  </div>
                  <input
                    aria-disabled="false"
                    aria-invalid="false"
                    aria-required="true"
                    class="cl-formFieldInput cl-input cl-formFieldInput__identifier cl-input__identifier cl-required 🔒️ css-bdpa54"
                    data-feedback="info"
                    data-variant="default"
                    id="identifier-field"
                    name="identifier"
                    placeholder=""
                    props="[object Object]"
                    required=""
                    type="text"
                    value=""
                  />
                </div>
                <span
                  aria-atomic="true"
                  aria-live="polite"
                  class="css-5ur8x"
                />
                <div
                  class="css-z8mie1"
                  style="height: 0px; position: relative;"
                />
              </div>
            </div>
          </div>
          <div
            class="css-1pnppin"
          >
            <div
              class="css-aurft1"
              data-cl-language="en-us"
              data-cl-size="normal"
              data-cl-theme="auto"
              id="clerk-captcha"
              style="display: block; align-self: center; max-height: 0; min-height: unset; margin-bottom: unset;"
            />
            <button
              class="cl-formButtonPrimary cl-button 🔒️ css-6yxkbg"
              data-color="primary"
              data-localization-key="formButtonPrimary"
              data-variant="solid"
            >
              <span
                class="css-2iusy0"
              >
                Continue
                <span
                  class="cl-buttonArrowIcon 🔒️ css-ra3p3j-Icon"
                />
              </span>
            </button>
          </div>
        </form>
      </div>
    </div>
    <div
      class="cl-footer 🔒️ css-12ewqpd"
    >
      <div
        class="cl-footerAction cl-footerAction__signIn 🔒️ css-h2zfvr"
      >
        <span
          class="cl-footerActionText 🔒️ css-1glf53s"
          data-color="secondary"
          data-localization-key="signIn.start.actionText__join_waitlist"
          data-variant="body"
        >
          Want early access?
        </span>
        <a
          class="cl-footerActionLink 🔒️ css-12ndoxu-Link"
          data-localization-key="signIn.start.actionLink__join_waitlist"
          href="https://clerk.com/waitlist"
        >
          Join waitlist
        </a>
      </div>
      <div
        class="cl-footerItem 🔒️ css-1ww4jbf"
      >
        <div
          class="css-dt53uo"
        >
          <div
            class="css-y44tp9"
          >
            <div
              class="css-ssjl5l"
            >
              <p
                class="css-1scq7x4"
                data-color="inherit"
                data-variant="buttonSmall"
              >
                Secured by
              </p>
              <a
                aria-label="Clerk logo"
                class="css-1bdbjec-Link"
                href="https://go.clerk.com/components"
                rel="noopener noreferrer"
                target="_blank"
              >
                <span
                  class="css-yjy4qv-Icon"
                />
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SignInStartView snapshots > renders with card error 1`] = `
<div>
  <div
    class="cl-cardBox cl-signIn-start 🔒️ css-lesbzj"
  >
    <div
      class="cl-card cl-signIn-start 🔒️ css-umn37z"
    >
      <div
        class="cl-header 🔒️ css-1f4p2mz"
      >
        <div
          class="cl-logoBox 🔒️ css-18b18uy"
        >
          <a
            class="css-1xlmx23-Link"
            href="https://dashboard.clerk.com/"
          >
            <img
              alt="TestApp"
              class="cl-logoImage 🔒️ css-oc7xeg"
              crossorigin="anonymous"
              src="https://images.clerk.com/uploaded/img_logo.png"
            />
          </a>
        </div>
        <div
          class="css-x0fvpz"
        >
          <h1
            class="cl-headerTitle 🔒️ css-x8j9i5-Heading"
            data-localization-key="signIn.start.title"
          >
            Sign in to TestApp
          </h1>
          <p
            class="cl-headerSubtitle 🔒️ css-1n6j0h4"
            data-color="secondary"
            data-localization-key="signIn.start.subtitle"
            data-variant="body"
          >
            Welcome back! Please sign in to continue
          </p>
        </div>
      </div>
      <div
        class="cl-collapsible 🔒️ css-123spxc"
      >
        <div
          class="cl-collapsibleInner 🔒️ css-wuoctg"
        >
          <div
            class="cl-alert cl-alert__danger 🔒️ css-1t2wq0c-Alert"
          >
            <span
              class="cl-alertIcon cl-alertIcon__danger 🔒️ css-36nqis-AlertIcon"
            />
            <div
              class="cl-alertTextContainer cl-alertTextContainer__danger 🔒️ css-d4ewss"
            >
              <p
                class="cl-alertText cl-alertText__danger 🔒️ css-gqfkd9"
                data-color="danger"
                data-variant="body"
              >
                Something went wrong
              </p>
            </div>
          </div>
        </div>
      </div>
      <div
        class="cl-main 🔒️ css-vvtys3"
      >
        <form
          class="cl-form 🔒️ css-ji79b9"
        >
          <button
            aria-hidden="true"
            style="visibility: hidden; position: absolute;"
            type="submit"
          />
          <div
            class="css-ht35d7"
          >
            <div
              class="cl-formFieldRow cl-formFieldRow__identifier 🔒️ css-k7wlaf"
            >
              <div
                class="cl-formField cl-formField__identifier 🔒️ css-10rdw13"
              >
                <div
                  class="css-17uj465"
                >
                  <div
                    class="cl-formFieldLabelRow cl-formFieldLabelRow__identifier 🔒️ css-66mzqw"
                  >
                    <label
                      class="cl-formFieldLabel cl-formFieldLabel__identifier-field cl-required 🔒️ css-h16r45-FormLabel"
                      data-localization-key="formFieldLabel__identifier"
                      for="identifier-field"
                    />
                  </div>
                  <input
                    aria-disabled="false"
                    aria-invalid="false"
                    aria-required="true"
                    class="cl-formFieldInput cl-input cl-formFieldInput__identifier cl-input__identifier cl-required 🔒️ css-bdpa54"
                    data-feedback="info"
                    data-variant="default"
                    id="identifier-field"
                    name="identifier"
                    placeholder=""
                    props="[object Object]"
                    required=""
                    type="text"
                    value=""
                  />
                </div>
                <span
                  aria-atomic="true"
                  aria-live="polite"
                  class="css-5ur8x"
                />
                <div
                  class="css-z8mie1"
                  style="height: 0px; position: relative;"
                />
              </div>
            </div>
          </div>
          <div
            class="css-1pnppin"
          >
            <div
              class="css-aurft1"
              data-cl-language="en-us"
              data-cl-size="normal"
              data-cl-theme="auto"
              id="clerk-captcha"
              style="display: block; align-self: center; max-height: 0; min-height: unset; margin-bottom: unset;"
            />
            <button
              class="cl-formButtonPrimary cl-button 🔒️ css-6yxkbg"
              data-color="primary"
              data-localization-key="formButtonPrimary"
              data-variant="solid"
            >
              <span
                class="css-2iusy0"
              >
                Continue
                <span
                  class="cl-buttonArrowIcon 🔒️ css-ra3p3j-Icon"
                />
              </span>
            </button>
          </div>
        </form>
      </div>
    </div>
    <div
      class="cl-footer 🔒️ css-12ewqpd"
    >
      <div
        class="cl-footerAction cl-footerAction__signIn 🔒️ css-h2zfvr"
      >
        <span
          class="cl-footerActionText 🔒️ css-1glf53s"
          data-color="secondary"
          data-localization-key="signIn.start.actionText"
          data-variant="body"
        >
          Don’t have an account?
        </span>
        <a
          class="cl-footerActionLink 🔒️ css-12ndoxu-Link"
          data-localization-key="signIn.start.actionLink"
          href="https://clerk.com/sign-up"
        >
          Sign up
        </a>
      </div>
      <div
        class="cl-footerItem 🔒️ css-1ww4jbf"
      >
        <div
          class="css-dt53uo"
        >
          <div
            class="css-y44tp9"
          >
            <div
              class="css-ssjl5l"
            >
              <p
                class="css-1scq7x4"
                data-color="inherit"
                data-variant="buttonSmall"
              >
                Secured by
              </p>
              <a
                aria-label="Clerk logo"
                class="css-1bdbjec-Link"
                href="https://go.clerk.com/components"
                rel="noopener noreferrer"
                target="_blank"
              >
                <span
                  class="css-yjy4qv-Icon"
                />
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SignInStartView snapshots > renders with passkey button 1`] = `
<div>
  <div
    class="cl-cardBox cl-signIn-start 🔒️ css-lesbzj"
  >
    <div
      class="cl-card cl-signIn-start 🔒️ css-umn37z"
    >
      <div
        class="cl-header 🔒️ css-1f4p2mz"
      >
        <div
          class="cl-logoBox 🔒️ css-18b18uy"
        >
          <a
            class="css-1xlmx23-Link"
            href="https://dashboard.clerk.com/"
          >
            <img
              alt="TestApp"
              class="cl-logoImage 🔒️ css-oc7xeg"
              crossorigin="anonymous"
              src="https://images.clerk.com/uploaded/img_logo.png"
            />
          </a>
        </div>
        <div
          class="css-x0fvpz"
        >
          <h1
            class="cl-headerTitle 🔒️ css-x8j9i5-Heading"
            data-localization-key="signIn.start.title"
          >
            Sign in to TestApp
          </h1>
          <p
            class="cl-headerSubtitle 🔒️ css-1n6j0h4"
            data-color="secondary"
            data-localization-key="signIn.start.subtitle"
            data-variant="body"
          >
            Welcome back! Please sign in to continue
          </p>
        </div>
      </div>
      <div
        class="cl-main 🔒️ css-vvtys3"
      >
        <form
          class="cl-form 🔒️ css-ji79b9"
        >
          <button
            aria-hidden="true"
            style="visibility: hidden; position: absolute;"
            type="submit"
          />
          <div
            class="css-ht35d7"
          >
            <div
              class="cl-formFieldRow cl-formFieldRow__identifier 🔒️ css-k7wlaf"
            >
              <div
                class="cl-formField cl-formField__identifier 🔒️ css-10rdw13"
              >
                <div
                  class="css-17uj465"
                >
                  <div
                    class="cl-formFieldLabelRow cl-formFieldLabelRow__identifier 🔒️ css-66mzqw"
                  >
                    <label
                      class="cl-formFieldLabel cl-formFieldLabel__identifier-field cl-required 🔒️ css-h16r45-FormLabel"
                      data-localization-key="formFieldLabel__identifier"
                      for="identifier-field"
                    />
                  </div>
                  <input
                    aria-disabled="false"
                    aria-invalid="false"
                    aria-required="true"
                    class="cl-formFieldInput cl-input cl-formFieldInput__identifier cl-input__identifier cl-required 🔒️ css-bdpa54"
                    data-feedback="info"
                    data-variant="default"
                    id="identifier-field"
                    name="identifier"
                    placeholder=""
                    props="[object Object]"
                    required=""
                    type="text"
                    value=""
                  />
                </div>
                <span
                  aria-atomic="true"
                  aria-live="polite"
                  class="css-5ur8x"
                />
                <div
                  class="css-z8mie1"
                  style="height: 0px; position: relative;"
                />
              </div>
            </div>
          </div>
          <div
            class="css-1pnppin"
          >
            <div
              class="css-aurft1"
              data-cl-language="en-us"
              data-cl-size="normal"
              data-cl-theme="auto"
              id="clerk-captcha"
              style="display: block; align-self: center; max-height: 0; min-height: unset; margin-bottom: unset;"
            />
            <button
              class="cl-formButtonPrimary cl-button 🔒️ css-6yxkbg"
              data-color="primary"
              data-localization-key="formButtonPrimary"
              data-variant="solid"
            >
              <span
                class="css-2iusy0"
              >
                Continue
                <span
                  class="cl-buttonArrowIcon 🔒️ css-ra3p3j-Icon"
                />
              </span>
            </button>
          </div>
        </form>
        <div
          class="cl-footerAction cl-footerAction__usePasskey 🔒️ css-h2zfvr"
        >
          <a
            class="cl-footerActionLink 🔒️ css-12ndoxu-Link"
            data-localization-key="signIn.start.actionLink__use_passkey"
            href="https://clerk.com/"
          >
            Use passkey instead
          </a>
        </div>
      </div>
    </div>
    <div
      class="cl-footer 🔒️ css-12ewqpd"
    >
      <div
        class="cl-footerAction cl-footerAction__signIn 🔒️ css-h2zfvr"
      >
        <span
          class="cl-footerActionText 🔒️ css-1glf53s"
          data-color="secondary"
          data-localization-key="signIn.start.actionText"
          data-variant="body"
        >
          Don’t have an account?
        </span>
        <a
          class="cl-footerActionLink 🔒️ css-12ndoxu-Link"
          data-localization-key="signIn.start.actionLink"
          href="https://clerk.com/sign-up"
        >
          Sign up
        </a>
      </div>
      <div
        class="cl-footerItem 🔒️ css-1ww4jbf"
      >
        <div
          class="css-dt53uo"
        >
          <div
            class="css-y44tp9"
          >
            <div
              class="css-ssjl5l"
            >
              <p
                class="css-1scq7x4"
                data-color="inherit"
                data-variant="buttonSmall"
              >
                Secured by
              </p>
              <a
                aria-label="Clerk logo"
                class="css-1bdbjec-Link"
                href="https://go.clerk.com/components"
                rel="noopener noreferrer"
                target="_blank"
              >
                <span
                  class="css-yjy4qv-Icon"
                />
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SignInStartView snapshots > renders with password field 1`] = `
<div>
  <div
    class="cl-cardBox cl-signIn-start 🔒️ css-lesbzj"
  >
    <div
      class="cl-card cl-signIn-start 🔒️ css-umn37z"
    >
      <div
        class="cl-header 🔒️ css-1f4p2mz"
      >
        <div
          class="cl-logoBox 🔒️ css-18b18uy"
        >
          <a
            class="css-1xlmx23-Link"
            href="https://dashboard.clerk.com/"
          >
            <img
              alt="TestApp"
              class="cl-logoImage 🔒️ css-oc7xeg"
              crossorigin="anonymous"
              src="https://images.clerk.com/uploaded/img_logo.png"
            />
          </a>
        </div>
        <div
          class="css-x0fvpz"
        >
          <h1
            class="cl-headerTitle 🔒️ css-x8j9i5-Heading"
            data-localization-key="signIn.start.title"
          >
            Sign in to TestApp
          </h1>
          <p
            class="cl-headerSubtitle 🔒️ css-1n6j0h4"
            data-color="secondary"
            data-localization-key="signIn.start.subtitle"
            data-variant="body"
          >
            Welcome back! Please sign in to continue
          </p>
        </div>
      </div>
      <div
        class="cl-main 🔒️ css-vvtys3"
      >
        <form
          class="cl-form 🔒️ css-ji79b9"
        >
          <button
            aria-hidden="true"
            style="visibility: hidden; position: absolute;"
            type="submit"
          />
          <div
            class="css-ht35d7"
          >
            <div
              class="cl-formFieldRow cl-formFieldRow__identifier 🔒️ css-k7wlaf"
            >
              <div
                class="cl-formField cl-formField__identifier 🔒️ css-10rdw13"
              >
                <div
                  class="css-17uj465"
                >
                  <div
                    class="cl-formFieldLabelRow cl-formFieldLabelRow__identifier 🔒️ css-66mzqw"
                  >
                    <label
                      class="cl-formFieldLabel cl-formFieldLabel__identifier-field cl-required 🔒️ css-h16r45-FormLabel"
                      data-localization-key="formFieldLabel__identifier"
                      for="identifier-field"
                    />
                  </div>
                  <input
                    aria-disabled="false"
                    aria-invalid="false"
                    aria-required="true"
                    class="cl-formFieldInput cl-input cl-formFieldInput__identifier cl-input__identifier cl-required 🔒️ css-bdpa54"
                    data-feedback="info"
                    data-variant="default"
                    id="identifier-field"
                    name="identifier"
                    placeholder=""
                    props="[object Object]"
                    required=""
                    type="text"
                    value=""
                  />
                </div>
                <span
                  aria-atomic="true"
                  aria-live="polite"
                  class="css-5ur8x"
                />
                <div
                  class="css-z8mie1"
                  style="height: 0px; position: relative;"
                />
              </div>
            </div>
            <div
              class="cl-formFieldRow cl-formFieldRow__password 🔒️ css-1xm094w"
            >
              <div
                class="cl-formField cl-formField__password 🔒️ css-10rdw13"
              >
                <div
                  class="css-17uj465"
                >
                  <div
                    class="cl-formFieldLabelRow cl-formFieldLabelRow__password 🔒️ css-66mzqw"
                  >
                    <label
                      class="cl-formFieldLabel cl-formFieldLabel__password-field cl-required 🔒️ css-h16r45-FormLabel"
                      data-localization-key="formFieldLabel__password"
                      for="password-field"
                    >
                      Password
                    </label>
                  </div>
                  <div
                    class="cl-formFieldInputGroup 🔒️ css-i1u4p8"
                  >
                    <input
                      aria-disabled="false"
                      aria-invalid="false"
                      aria-required="true"
                      class="cl-formFieldInput cl-input cl-formFieldInput__password cl-input__password cl-required 🔒️ css-nvk3g"
                      data-feedback="info"
                      data-variant="default"
                      id="password-field"
                      name="password"
                      placeholder="Enter your password"
                      props="[object Object]"
                      required=""
                      tabindex="-1"
                      type="password"
                      value=""
                    />
                    <button
                      aria-label="Show password"
                      class="cl-formFieldInputShowPasswordButton cl-button 🔒️ css-poejws"
                      data-color="primary"
                      data-variant="ghost"
                      tabindex="-1"
                    >
                      <span
                        class="cl-formFieldInputShowPasswordIcon 🔒️ css-1ctxcx1-Icon"
                      />
                    </button>
                  </div>
                </div>
                <span
                  aria-atomic="true"
                  aria-live="polite"
                  class="css-5ur8x"
                />
                <div
                  class="css-z8mie1"
                  style="height: 0px; position: relative;"
                />
              </div>
            </div>
          </div>
          <div
            class="css-1pnppin"
          >
            <div
              class="css-aurft1"
              data-cl-language="en-us"
              data-cl-size="normal"
              data-cl-theme="auto"
              id="clerk-captcha"
              style="display: block; align-self: center; max-height: 0; min-height: unset; margin-bottom: unset;"
            />
            <button
              class="cl-formButtonPrimary cl-button 🔒️ css-6yxkbg"
              data-color="primary"
              data-localization-key="formButtonPrimary"
              data-variant="solid"
            >
              <span
                class="css-2iusy0"
              >
                Continue
                <span
                  class="cl-buttonArrowIcon 🔒️ css-ra3p3j-Icon"
                />
              </span>
            </button>
          </div>
        </form>
      </div>
    </div>
    <div
      class="cl-footer 🔒️ css-12ewqpd"
    >
      <div
        class="cl-footerAction cl-footerAction__signIn 🔒️ css-h2zfvr"
      >
        <span
          class="cl-footerActionText 🔒️ css-1glf53s"
          data-color="secondary"
          data-localization-key="signIn.start.actionText"
          data-variant="body"
        >
          Don’t have an account?
        </span>
        <a
          class="cl-footerActionLink 🔒️ css-12ndoxu-Link"
          data-localization-key="signIn.start.actionLink"
          href="https://clerk.com/sign-up"
        >
          Sign up
        </a>
      </div>
      <div
        class="cl-footerItem 🔒️ css-1ww4jbf"
      >
        <div
          class="css-dt53uo"
        >
          <div
            class="css-y44tp9"
          >
            <div
              class="css-ssjl5l"
            >
              <p
                class="css-1scq7x4"
                data-color="inherit"
                data-variant="buttonSmall"
              >
                Secured by
              </p>
              <a
                aria-label="Clerk logo"
                class="css-1bdbjec-Link"
                href="https://go.clerk.com/components"
                rel="noopener noreferrer"
                target="_blank"
              >
                <span
                  class="css-yjy4qv-Icon"
                />
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
